# distributed-data-demos

./: .gitattributes  .gitignore  BENCHMARK.md  CUSTOM.md  DESIGN.md  README.md  build_info.rs  cargo.toml  distributed-data-demos.code-workspace  two-runner-test.toml  usage-guide.md
.claude/: CLAUDE.md
analysis/: AGENTS.md  CUSTOM.md  STRUCT.md  analyze.py  cache.py  clock_offsets.py  correlate.py  incomplete_warnings.py  integrity.py  parse.py  parse_compact.py  performance.py  pivot_tables.py  plots.py  requirements.txt  schema.py  tables.py  timeout_classification.py
analysis/.claude/: CLAUDE.md
analysis/tests/: compact_fixture.py  conftest.py  helpers.py  test_analyze.py  test_analyze_dump.py  (+18 more)
configs/: _t198_single_runner_workload_shapes.toml  multi-machine-10peer-all.toml  smoke-all-variants.toml  smoke-t148-threading-modes.toml  tier2-smoke.toml  two-runner-all-variants-missing.toml  two-runner-all-variants.toml  two-runner-fixed-rate.toml  two-runner-hybrid-all.toml  two-runner-max-throughput.toml  two-runner-quic-10x100.toml  two-runner-quic-all.toml  two-runner-smoke-e14.toml  two-runner-smoke-tight.toml  two-runner-smoke.toml  two-runner-stress-e14.toml  two-runner-t1416-repro.toml  two-runner-test.toml  two-runner-udp-all.toml  two-runner-udp-fixed-rate.toml  two-runner-udp-max-throughput.toml  two-runner-webrtc-all.toml  two-runner-websocket-all.toml  two-runner-websocket-qos4-multi-1000x100hz.toml  two-runner-websocket-qos4.toml  two-runner-workload-shapes.toml  two-runner-zenoh-10hz-recheck.toml  two-runner-zenoh-all.toml  two-runner-zenoh-single-stress-t149c.toml
metak-orchestrator/: CUSTOM.md  DECISIONS.md  EPICS.md  STATUS.md  TASKS.md
metak-shared/: ANALYSIS.md  BENCHMARK.md  DESIGN.md  LEARNED.md  architecture.md  coding-standards.md  glossary.md  livelink-omniverse-exploration.md  overview.md  presentation-brief.md  presentation.html  slides.md  usage-guide.md  variant-candidates.md
runner/: AGENTS.md  CUSTOM.md  Cargo.toml  STRUCT.md  test-config.toml
runner/.claude/: CLAUDE.md
runner/src/: analyze.rs  barrier_coord.rs  cli_args.rs  clock_sync.rs  clock_sync_log.rs  config.rs  local_addrs.rs  main.rs  message.rs  panic_hook.rs  progress.rs  progress_coord.rs  progress_eta.rs  protocol.rs  resume.rs  spawn.rs  spawn_job.rs  termination.rs
runner/tests/: clock_sync_stress.rs  integration.rs
runner/tests/fixtures/: bad-name.toml  block-flood-blob-size.toml  multi-variant.toml  qos-array.toml  qos-omitted.toml  repro-silent-exit-custom-udp.toml  single-runner.toml  t15-4-idle-termination.toml  template-and-arrays.toml  threading-modes-gated.toml  threading-modes.toml
runner/tests/helpers/: arg_echo.rs  panic_helper.rs  sleeper.rs  stderr_writer.rs
scripts/: README.md  runner-resume.ps1  runner-resume.sh
variant-base/: AGENTS.md  CUSTOM.md  Cargo.toml  STRUCT.md
variant-base/.claude/: CLAUDE.md
variant-base/src/: build_info.rs  cli.rs  compact.rs  compact_writer.rs  driver.rs  dummy.rs  lib.rs  logger.rs  progress_emitter.rs  resource.rs  seq.rs  socket.rs  types.rs  variant_trait.rs  watchdog.rs  workload.rs
variant-base/tests/: integration.rs
variant-base/tmp/: smoke-fairness.toml
variants/: T18.3-AUDIT.md
variants/custom-udp/: AGENTS.md  CUSTOM.md  Cargo.toml  STRUCT.md
variants/custom-udp/.claude/: CLAUDE.md
variants/custom-udp/src/: controltcp.rs  main.rs  protocol.rs  qos.rs  udp.rs
variants/custom-udp/tests/: eot_saturation.rs  integration.rs  multicast_loopback.rs  two_runner_regression.rs  two_runner_t14_19_tcp_single_no_deadlock.rs  two_runner_t14_22_qos4_startup_race.rs  two_runner_t17_3_qos4_backpressure.rs
variants/custom-udp/tests/fixtures/: t16-4-custom-udp-1000x10hz-qos3.toml  two-runner-custom-udp-qos1-eot.toml  two-runner-custom-udp-qos4-multi.toml  two-runner-custom-udp-qos4-saturate-repro.toml  two-runner-custom-udp-qos4.toml  two-runner-custom-udp-t14-19-stress.toml  two-runner-custom-udp-t14-22-startup-race.toml
variants/hybrid/: AGENTS.md  CUSTOM.md  Cargo.toml  STRUCT.md
variants/hybrid/.claude/: CLAUDE.md
variants/hybrid/src/: controltcp.rs  hybrid.rs  main.rs  protocol.rs  reader.rs  tcp.rs  udp.rs
variants/hybrid/tests/: eot_saturation.rs  integration.rs  two_runner_regression.rs  two_runner_threading_modes.rs
variants/hybrid/tests/fixtures/: two-runner-hybrid-100x100hz-both-modes.toml  two-runner-hybrid-highrate.toml  two-runner-hybrid-only.toml  two-runner-hybrid-qos4-saturate-repro-pt2.toml  two-runner-hybrid-qos4-saturate-repro.toml  two-runner-hybrid-qos4-smoke.toml  two-runner-hybrid-t16-3-stress.toml
variants/quic/: AGENTS.md  CUSTOM.md  Cargo.toml  STRUCT.md
variants/quic/.claude/: CLAUDE.md
variants/quic/src/: certs.rs  main.rs  quic.rs
variants/quic/tests/: loopback.rs  two_runner_qos1_oversize_skip.rs  two_runner_t14_13_qos4_ordering.rs
variants/quic/tests/fixtures/: repro-quic-1000x100hz-mixed-qos1.toml  two-runner-quic-only.toml  two-runner-quic-qos4-saturate-repro.toml
variants/webrtc/: AGENTS.md  CUSTOM.md  Cargo.toml  STRUCT.md
variants/webrtc/.claude/: CLAUDE.md
variants/webrtc/src/: main.rs  pairing.rs  protocol.rs  signaling.rs  webrtc.rs
variants/webrtc/tests/: integration.rs
variants/webrtc/tests/fixtures/: loopback.toml  two-runner-webrtc-qos4-saturate-repro.toml
variants/zenoh/: AGENTS.md  CUSTOM.md  Cargo.toml  STRUCT.md
variants/zenoh/.claude/: CLAUDE.md
variants/zenoh/examples/: CROSS_MACHINE_SMOKE.md  cross_machine_smoke.rs  run_cross_machine_smoke.ps1
variants/zenoh/src/: main.rs  rest_client.rs  sidecar.rs  zenoh.rs
variants/zenoh/tests/: loopback.rs  sidecar_smoke.rs  smoke-config.toml  two_runner_regression.rs
variants/zenoh/tests/fixtures/: repro-zenoh-self-filter.toml  two-runner-zenoh-1000paths.toml  two-runner-zenoh-1000x100hz-qos1-repro.toml  two-runner-zenoh-1000x100hz-qos3-repro.toml  two-runner-zenoh-1000x100hz-qos4-repro.toml  two-runner-zenoh-1000x10hz-qos3-repro.toml  two-runner-zenoh-1000x10hz-qos4-repro.toml  two-runner-zenoh-max.toml  two-runner-zenoh-single-t149c.toml  two-runner-zenoh-single.toml
(+34 files in other folders)
