[package]
name = "runner"
version = "0.1.0"
edition = "2021"
build = "../build_info.rs"

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "sleeper"
path = "tests/helpers/sleeper.rs"

[[bin]]
name = "arg-echo"
path = "tests/helpers/arg_echo.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
local-ip-address = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = "0.5"
toml = "0.8"
