[package]
name = "variant-base"
version = "0.1.0"
edition = "2021"
build = "../build_info.rs"

[lib]
name = "variant_base"
path = "src/lib.rs"

[[bin]]
name = "variant-dummy"
path = "src/bin/variant_dummy.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# socket2 is used by the `socket` module to query/tune SO_RCVBUF / SO_SNDBUF
# on UDP sockets owned by concrete variants. The variants each already
# depend on socket2 directly; centralising the tuning helper here keeps
# every UDP creation site honest.
socket2 = "0.5"
sysinfo = "0.33"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
