[package]
name = "variant-base"
version = "0.1.0"
edition = "2021"
build = "../build_info.rs"

[lib]
name = "variant_base"
path = "src/lib.rs"

[[bin]]
name = "variant-dummy"
path = "src/bin/variant_dummy.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# socket2 is used by the `socket` module to query/tune SO_RCVBUF / SO_SNDBUF
# on UDP sockets owned by concrete variants. The variants each already
# depend on socket2 directly; centralising the tuning helper here keeps
# every UDP creation site honest.
socket2 = "0.5"
sysinfo = "0.33"
thiserror = "2"
# `parquet` (arrow-rs family) is used by the `compact_writer` module
# to serialise the in-memory columnar buffers into a single
# `<variant>-<runner>-<run>.compact.parquet` file at the end of each
# spawn (T18.2 / E18). We use the lower-level `column::writer` API
# rather than the higher-level `arrow` integration to avoid pulling
# the full arrow + arrow-buffer + arrow-array dependency graph into
# the variant base crate. Default features (including `snap` for the
# Snappy codec which is our chosen compression) are sufficient.
parquet = "53"
# `rand` (and `rand` 0.8's `StdRng`) is used by the `MixedTypes` workload
# profile (E19 / T19.2) to generate deterministically-seeded heterogeneous
# trees of scalars / arrays / nested dicts. The seed is supplied via
# `--workload-seed` (T19.3) or derived from `--variant + --run` when
# unset, so re-runs with identical config produce identical workload
# sequences. We also use `rand` from a workload's perspective to fill
# block-flood payloads with non-trivial bytes -- the analysis pipeline
# never inspects the payload contents so the byte values are arbitrary,
# but using `rand` keeps the serialiser honest under variants that
# look at the bytes (e.g. compression-aware transports).
rand = "0.8"

[dev-dependencies]
tempfile = "3"
# `parquet` is also a dev-dependency so the integration test can
# read the produced file back via `SerializedFileReader`.
parquet = "53"
