[package]
name = "variant-custom-udp"
version = "0.1.0"
edition = "2021"
build = "../../build_info.rs"

[[bin]]
name = "variant-custom-udp"
path = "src/main.rs"

[dependencies]
variant-base = { path = "../../variant-base" }
socket2 = "0.5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
