[package]
name = "variant-quic"
version = "0.1.0"
edition = "2021"
build = "../../build_info.rs"

[[bin]]
name = "variant-quic"
path = "src/main.rs"

[dependencies]
variant-base = { path = "../../variant-base" }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
# `bytes::Bytes` for the QoS 1/2 try_publish path (T-impl.7): quinn's
# `Connection::send_datagram` takes a `bytes::Bytes`, so we need a
# direct dependency to construct it from our `Vec<u8>` encode buffer.
bytes = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
