[package]
name = "variant-webrtc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "variant-webrtc"
path = "src/main.rs"

[dependencies]
variant-base = { path = "../../variant-base" }
webrtc = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

[dev-dependencies]
tempfile = "3"
