[package]
name = "variant-zenoh"
version = "0.1.0"
edition = "2021"
build = "../../build_info.rs"

[[bin]]
name = "variant-zenoh"
path = "src/main.rs"

[dependencies]
anyhow = "1"
variant-base = { path = "../../variant-base" }
zenoh = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
# Tokio runtime owned by ZenohVariant for the publish/receive bridge
# (Option B in DECISIONS.md D7 / T10.2b). The runtime drives Zenoh's async
# API end-to-end so the variant's main thread never blocks the routing path.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
# CPU count for the bridge runtime sizing (T-zenoh.1): we size
# `worker_threads` from the host CPU count so the publisher / subscriber /
# EOT subscriber tasks aren't all serialized onto two workers.
num_cpus = "1"
# `bytes::BytesMut` / `bytes::Bytes` for the per-publisher-task encode
# buffer (T-zenoh.1). `bytes::Bytes -> zenoh::ZBytes` is zero-copy via
# zenoh's `BytesWrap`, so we can encode into a reused BytesMut, freeze
# slices off it, and hand them to `publisher.put(...)` without per-call
# allocation in the hot path.
bytes = "1"
# T14.9a: `serde_json` is used to build the per-spawn zenohd config
# file enabling the REST plugin. Promoted from a dev-dep to a runtime
# dep when the sidecar lifecycle was added.
serde_json = "1"
# T14.9b: synchronous HTTP + SSE client used by Single mode against the
# `zenoh-plugin-rest` surface on the sidecar. `default-features = false`
# strips out `rustls` + `gzip` -- the sidecar is bound to 127.0.0.1 so
# HTTP-only is fine, and the verified-tokio-free invariant matters
# here (see CUSTOM.md "T14.9b tokio-free verification"). ureq 3.x is a
# pure-sync client built on `std::net`; it does NOT pull tokio.
ureq = { version = "3", default-features = false }
# T14.9b: the zenoh-plugin-rest SSE surface base64-encodes payloads
# inside its JSON `value` field when the sample's encoding does not
# parse as UTF-8 / JSON (our binary `MessageCodec` output always
# triggers this path). Decoding it back to bytes is one
# `base64::engine::general_purpose::STANDARD.decode` call.
base64 = "0.22"

# T14.9a per-platform sidecar child-process cleanup.
# Windows: Job Object with KILL_ON_JOB_CLOSE guarantees zenohd dies if
# variant-zenoh is SIGKILLed (preventing orphans). `windows-sys` is
# already a transitive dep in the workspace and lighter than `windows`.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

# T14.9a Linux: prctl(PR_SET_PDEATHSIG, SIGTERM) in a pre-exec hook so
# the kernel signals the child when the variant process dies (orphan
# protection). macOS gets best-effort setpgid via the same path; see
# CUSTOM.md "Sidecar lifecycle".
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# T16.15: read the per-spawn `.compact.parquet` digest from
# `two_runner_regression.rs` so the operate-window-scoped delivery
# checks lifted to test-side (the same shape the JSONL parser had
# pre-T18.2b) can be evaluated against per-event observations.
# `parquet` 53.x is already pulled into the workspace by `variant-base`
# (both as a runtime and a dev-dep there) so this adds zero new crates
# to the dependency graph -- only re-declares the existing dep here as
# a dev-dep so the test target can `use parquet::...` directly.
parquet = "53"
# T16.15: `serde_json` is used to decode the `peers` and `paths`
# intern dictionaries from the compact-Parquet KV file metadata
# (stored as JSON-encoded `Vec<String>` per
# `metak-shared/api-contracts/compact-log-schema.md`). Already a
# runtime dep of variant-zenoh (T14.9a sidecar config), declared
# again here so the test target has explicit visibility.
serde_json = "1"
